[metadata]
name = GSheetsSorcery
version = 0.1.0
description = Package for common tasks using pygsheets and SQLSorcery
author = Mark Young
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    GSheetsSorcery
install_requires =
    pandas>=1.5
    SQLAlchemy==1.4
    SQLSorcery>=0.1
    pygsheets>=2.0
python_requires = >=3.9
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    flake8 >=6.0
    tox >= 4.0
    pytest >= 7.0
    pytest-cov >= 4.0
    mypy >= 1.0

[options.package_data]
GSheetsSorcery = py.typed

[flake8]
max-line-length=79
